@@ -11,5 +11,5 @@ requires: findutils-debuginfo
 scope: process
 description: On exit the perf.stp script provides a sorted list showing cycles per insn, branches per insn, and cache refs per insn
 test_support: rpm -q findutils-debuginfo
-test_check: stap -p4 perf.stp
-test_installcheck: stap perf.stp -c "find /usr/bin -name \"l*\" -printf \"%h/%f %s %Cx %Ck%CM %Y\n\""
+test_check: stap -w -p4 perf.stp
+test_installcheck: stap -w perf.stp -c "find /usr/bin -name \"l*\" -printf \"%h/%f %s %Cx %Ck%CM %Y\n\""
