@@ -48,11 +48,15 @@ set myproc_probe_types [list \
   "process.library(string).mark(string)" \
   "process.library(string).provider(string).mark(string)" \
   "process.library(string).statement(number)" \
+  "process.library(string).statement(number).nearest" \
   "process.library(string).statement(string)" \
+  "process.library(string).statement(string).nearest" \
   "process.provider(string).mark(string)" \
   "process.mark(string)" \
   "process.statement(number)" \
+  "process.statement(number).nearest" \
   "process.statement(string)" \
+  "process.statement(string).nearest" \
   "process.syscall" \
   "process.syscall.return" \
   "process.thread.begin" \
@@ -87,7 +91,9 @@ set myproc_probe_types [list \
   "process(number).plt(string).return" \
   "process(number).provider(string).mark(string)" \
   "process(number).statement(number)" \
+  "process(number).statement(number).nearest" \
   "process(number).statement(string)" \
+  "process(number).statement(string).nearest" \
   "process(string).begin" \
   "process(string).end" \
   "process(string).function(number)" \
@@ -122,7 +128,9 @@ set myproc_probe_types [list \
   "process(string).library(string).mark(string)" \
   "process(string).library(string).provider(string).mark(string)" \
   "process(string).library(string).statement(number)" \
+  "process(string).library(string).statement(number).nearest" \
   "process(string).library(string).statement(string)" \
+  "process(string).library(string).statement(string).nearest" \
   "process(string).library(string).plt" \
   "process(string).library(string).plt.return" \
   "process(string).library(string).plt(string)" \
@@ -130,7 +138,9 @@ set myproc_probe_types [list \
   "process(string).mark(string)" \
   "process(string).provider(string).mark(string)" \
   "process(string).statement(number)" \
+  "process(string).statement(number).nearest" \
   "process(string).statement(string)" \
+  "process(string).statement(string).nearest" \
   "process(string).plt" \
   "process(string).plt.return" \
   "process(string).plt(string)" \
