@@ -60,11 +60,15 @@ set unrestricted_probe_types [list \
   "process.library(string).mark(string)" \
   "process.library(string).provider(string).mark(string)" \
   "process.library(string).statement(number)" \
+  "process.library(string).statement(number).nearest" \
   "process.library(string).statement(string)" \
+  "process.library(string).statement(string).nearest" \
   "process.provider(string).mark(string)" \
   "process.mark(string)" \
   "process.statement(number)" \
+  "process.statement(number).nearest" \
   "process.statement(string)" \
+  "process.statement(string).nearest" \
   "process.syscall" \
   "process.syscall.return" \
   "process.thread.begin" \
@@ -97,7 +101,9 @@ set unrestricted_probe_types [list \
   "process(number).plt(string).return" \
   "process(number).provider(string).mark(string)" \
   "process(number).statement(number)" \
+  "process(number).statement(number).nearest" \
   "process(number).statement(string)" \
+  "process(number).statement(string).nearest" \
   "process(string).begin" \
   "process(string).end" \
   "process(string).function(number)" \
@@ -131,7 +137,9 @@ set unrestricted_probe_types [list \
   "process(string).library(string).mark(string)" \
   "process(string).library(string).provider(string).mark(string)" \
   "process(string).library(string).statement(number)" \
+  "process(string).library(string).statement(number).nearest" \
   "process(string).library(string).statement(string)" \
+  "process(string).library(string).statement(string).nearest" \
   "process(string).library(string).plt" \
   "process(string).library(string).plt.return" \
   "process(string).library(string).plt(string)" \
@@ -139,7 +147,9 @@ set unrestricted_probe_types [list \
   "process(string).mark(string)" \
   "process(string).provider(string).mark(string)" \
   "process(string).statement(number)" \
+  "process(string).statement(number).nearest" \
   "process(string).statement(string)" \
+  "process(string).statement(string).nearest" \
   "process(string).plt" \
   "process(string).plt.return" \
   "process(string).plt(string)" \
@@ -197,8 +207,10 @@ set restricted_probe_types [list \
   "kernel.mark(string)" \
   "kernel.mark(string).format(string)" \
   "kernel.statement(number)" \
+  "kernel.statement(number).nearest" \
   "kernel.statement(number).absolute" \
   "kernel.statement(string)" \
+  "kernel.statement(string).nearest" \
   "kernel.trace(string)" \
   "kprobe.function(string)" \
   "kprobe.function(string).call" \
@@ -225,7 +237,9 @@ set restricted_probe_types [list \
   "module(string).function(string).callees" \
   "module(string).function(string).callees(number)" \
   "module(string).statement(number)" \
+  "module(string).statement(number).nearest" \
   "module(string).statement(string)" \
+  "module(string).statement(string).nearest" \
   "perf.type(number).config(number)" \
   "perf.type(number).config(number).sample(number)" \
   "perf.type(number).config(number).counter(string)" \
